# teamucks

./: .gitignore  Cargo.toml  README.md  deny.toml  terminal-multiplexer-product-plan.md
crates/teamucks/: Cargo.toml
crates/teamucks-core/: Cargo.toml
crates/teamucks-core/src/: lib.rs  pane.rs  session.rs  signal.rs  window.rs
crates/teamucks-core/src/actor/: mod.rs  pty_reader.rs
crates/teamucks-core/src/config/: mod.rs  types.rs  validate.rs
crates/teamucks-core/src/input/: command.rs  key.rs  mod.rs  mouse.rs  prefix.rs
crates/teamucks-core/src/layout/: mod.rs  navigate.rs  resolve.rs  tree.rs
crates/teamucks-core/src/protocol/: codec.rs  decode.rs  encode.rs  mod.rs
crates/teamucks-core/src/pty/: child.rs  mod.rs
crates/teamucks-core/src/render/: borders.rs  diff.rs  mod.rs  statusbar.rs
crates/teamucks-core/src/server/: client.rs  listener.rs  mod.rs
crates/teamucks-core/tests/: actor_tests.rs  border_tests.rs  config_tests.rs  input_tests.rs  integration_runnable_tests.rs  layout_tests.rs  mouse_tests.rs  pane_tests.rs  protocol_tests.rs  pty_reader_tests.rs  pty_tests.rs  render_tests.rs  server_tests.rs  session_tests.rs  statusbar_tests.rs
crates/teamucks-proto/: Cargo.toml
crates/teamucks-proto/src/: lib.rs
crates/teamucks-vte/: Cargo.toml
crates/teamucks-vte/benches/: parse_throughput.rs
crates/teamucks-vte/fuzz/: Cargo.toml
crates/teamucks-vte/fuzz/fuzz_targets/: fuzz_parse.rs
crates/teamucks-vte/src/: alternate_screen_tests.rs  cell.rs  charsets.rs  grid.rs  lib.rs  modes.rs  modes_tests.rs  params.rs  parser.rs  reflow.rs  reflow_tests.rs  row.rs  scrollback.rs  style.rs  tabs_charsets_mouse_tests.rs  tabstops.rs  terminal.rs
crates/teamucks-vte/src/parser/: action.rs  table.rs
crates/teamucks-vte/tests/: cursor_tests.rs  erase_tests.rs  grid_tests.rs  parser_tests.rs  scroll_region_tests.rs  scrollback_tests.rs  sgr_tests.rs
crates/teamucks/src/: client.rs  lib.rs  main.rs  terminal.rs
crates/teamucks/tests/: client_tests.rs  terminal_tests.rs
