[workspace]
resolver = "2"
members = [
    "crates/teamucks-vte",
    "crates/teamucks-proto",
    "crates/teamucks-core",
    "crates/teamucks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
teamucks-vte = { path = "crates/teamucks-vte", version = "0.1.0" }
teamucks-proto = { path = "crates/teamucks-proto", version = "0.1.0" }
teamucks-core = { path = "crates/teamucks-core", version = "0.1.0" }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["term", "signal", "process", "ioctl"] }
bytes = "1"
bitflags = "2"
unicode-width = "0.2"
unicode-segmentation = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
