[package]
name = "teamucks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core multiplexer logic: sessions, layout, server, rendering"

[dependencies]
teamucks-vte = { workspace = true }
teamucks-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
libc = "0.2"
bytes = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
libc = "0.2"
tempfile = "3"
