[package]
name = "teamucks-vte"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A correct, high-performance virtual terminal emulator library"

[dependencies]
bitflags = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parse_throughput"
harness = false
